add style to buttons

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                         </label>
                     </div>
 
-                    <input type="button" name="save" id="save" value="Save" onclick="OnSave(this)">
-                    <input type="button" name="submit" id="submit" value="Submit" onclick="OnSubmit(this)">
+                    <div class="button-box">
+                        <input type="button" name="save" id="save" value="Save" onclick="OnSave(this)">
+                        <input type="button" name="submit" id="submit" value="Submit" onclick="OnSubmit(this)">
+                    </div>
                 </form>
             </div>
             <div class="flex-item">
