minor change to style

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <input type="text" class="name" name="name" placeholder="Please enter a name...">
                     </div>
                     <p>Please select your gender:</p>
-                    <div>
+                    <div class="gender-selection ">
                         <label class="radio-container">Male
                             <input type="radio" id="male" name="gender" value="male" checked="checked">
                             <span class="checkmark"></span>
@@ -42,7 +42,9 @@
                 </form>
             </div>
             <div class="flex-item">
-                Bye
+                <h3>
+                    Our Prediction:
+                </h3>
             </div>
         </div>
     </section>
