add window onload for rendering states

--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
                     </div>
 
                 </div>
+                <div id="saved-result-heading">
+                    <h3>Saved Result</h3>
+                    <button type="button" on="ResetSavedResults" onclick="ResetSavedResults()"></button>
+                </div>
                 <div id="saved-results-box">
-                    
+
                 </div>
             </section>
         </section>
