fix result box styling

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div id="saved-result-heading">
                     <h3>Saved Result</h3>
-                    <button type="button" on="ResetSavedResults" onclick="ResetSavedResults()"></button>
+                    <button type="button" on="ResetSavedResults" onclick="ResetSavedResults()">Clear</button>
                 </div>
                 <div id="saved-results-box">
 
