--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                 </div>
             </section>
         </section>
+        <section>
+            <div id="bottom-message-box">
+                
+            </div>
+        </section>
     </section>
 </body>
 
