--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     Mr. or Ms. ?
                 </h2>
 
-                <form>
+                <form id="submission-form">
                     <div class="field-box">
                         <label>Name:</label>
                         <input type="text" class="name" name="name" placeholder="Please enter a name...">
