add fetch result functiinality

--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
                 </h3>
                 <div id="prediction-box">
                     <div id="results">
-                        <div></div>
+                        <div>
+                            <div id = "result-gender">
+                            </div>
+                            <br>
+                            <div id = "result-probability">
+                            </div>
+                        </div>
+                        <div id="image"></div>
                     </div>
 
                 </div>
